# Sephirah

./: .gitignore  CMakeLists.txt  README.md  sephirah.h.in  uci_specification.txt
exp/: result.txt  script.sh  sephirah_vs_sf1320.pgn  sephirah_vs_sf1500.pgn  sephirah_vs_sf1600.pgn  sephirah_vs_sf1700.pgn  sephirah_vs_sf2000.pgn  sephirah_vs_sf2100.pgn  sephirah_vs_sf2200.pgn  sephirah_vs_sf2300.pgn  sephirah_vs_sf2400.pgn  sephirah_vs_sf2500.pgn  sephirah_vs_sf2600.pgn  sephirah_vs_sf3000.pgn
src/: CMakeLists.txt  bitboard.cpp  bitboard.h  evaluation.cpp  evaluation.h  main.cpp  option.cpp  option.h  position.cpp  position.h  psqt.cpp  random.cpp  random.h  search.cpp  search.h  thread.cpp  thread.h  transposition.cpp  transposition.h  types.h  uci.cpp  uci.h
tests/: CMakeLists.txt  bitboard.cpp  position.cpp  tt.cpp  types.cpp
