find_package(GTest REQUIRED)
include(GoogleTest)

file(GLOB TEST_SOURCES CONFIGURE_DEPENDS *.cpp)

foreach(test_src ${TEST_SOURCES})
	get_filename_component(test_name ${test_src} NAME_WE)

	add_executable(${test_name} ${test_src})
	target_link_libraries(${test_name} PRIVATE
		sephirah_lib
		GTest::gtest
		# GTest::gtest_main
		pthread
	)
	target_include_directories(${test_name} PRIVATE ${CMAKE_SOURCE_DIR}/src)

	gtest_discover_tests(${test_name})
endforeach()
